@@ -138,6 +138,7 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
 * Added ResourceLoader module "jquery.badge".
 * mw.util.$content now points to the overall content area in the skin rather than just
   page text content area. If you need the old behaviour please use $( '#mw-content-text').
+* Added $wgWhitelistReadRegexp for regex whitelisting
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
